Use lazy class resolution